YouTube URLs also now convertible.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-# Spotify API Credentials
+# Spotify API Credentials (Optional - only needed for Spotify URLs)
 # Get these from: https://developer.spotify.com/dashboard
-SPOTIFY_CLIENT_ID=your_client_id_here
-SPOTIFY_CLIENT_SECRET=your_client_secret_here
+# Leave empty if you only want to use YouTube URLs
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
 
 # Redis Configuration
 REDIS_HOST=redis
