fix: correct backend file path in extraResources

--- a/electron/package.json
+++ b/electron/package.json
@@ -32,9 +32,8 @@
     ],
     "extraResources": [
       {
-        "from": "../backend/",
-        "to": "backend",
-        "filter": ["music-downloader*"]
+        "from": "../backend/music-downloader",
+        "to": "backend/"
       },
       {
         "from": "../frontend/",
